k8s/blog-api-contour.yml
kind: Service
apiVersion: v1
metadata:
  name: blog-api
  namespace: blog
spec:
  type: ClusterIP
  selector:
    app: blog-api
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api
  namespace: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api
    spec:
      containers:
        - image: vagivagi/blog-api
          name: blog-api
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blog
  namespace: blog
  annotations:
    projectcontour.io/ingress.class: envoy
spec:
  rules:
    - host: vagivagi.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-api
              port:
                number: 8080
        - path: /ui
          pathType: Prefix
          backend:
            service:
              name: blog-ui
              port:
                number: 3000
